RESOLVED FIXED78650
Swipe gestures don't work if main frame has a horizontal scrollbar
https://bugs.webkit.org/show_bug.cgi?id=78650
Summary Swipe gestures don't work if main frame has a horizontal scrollbar
Anders Carlsson
Reported 2012-02-14 16:33:10 PST
Swipe gestures don't work if main frame has a horizontal scrollbar
Attachments
Patch (14.03 KB, patch)
2012-02-14 16:39 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2012-02-14 16:39:22 PST
Anders Carlsson
Comment 2 2012-02-14 17:08:38 PST
Note You need to log in before you can comment on or make changes to this bug.